src/objects/Mana_Household_Production_Record__c.object
<CustomObject>
    <fields>
        <fullName>Acelga__c</fullName>
        <label>Acelga</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_BG__c</fullName>
        <formula>IF(TEXT(Backyard_Garden_Type__c)=&apos;Activa&apos;,1,(IF(TEXT(Backyard_Garden_Type__c)=&apos;&apos;,1,0)))</formula>
        <label>Active BG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_type__c</fullName>
        <label>Activity type</label>
        <picklist>
            <picklistValues>
                <fullName>Seguimiento sostenibilidad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adress_or_ubication__c</fullName>
        <label>Adress or ubication</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aji__c</fullName>
        <label>Aji</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arroz__c</fullName>
        <label>Arroz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arveja__c</fullName>
        <label>Arveja</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autoconsumo_Destination_Amount__c</fullName>
        <label>Autoconsumo Destination Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backyard_Garden_Area__c</fullName>
        <label>Backyard Garden Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backyard_Garden_Stage__c</fullName>
        <label>Backyard Garden Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Ninguna</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cosecha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desarrollo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparación</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backyard_Garden_Type__c</fullName>
        <label>Backyard Garden Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inactiva</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Activa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backyard_garden_Status__c</fullName>
        <formula>IF(text( Backyard_Garden_Type__c )=&apos;Inactiva&apos;,&apos;Inactiva&apos;,&apos;Activa&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backyard garden Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backyard_garden_photo__c</fullName>
        <label>Backyard garden photo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Banano__c</fullName>
        <label>Banano</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Berenjena__c</fullName>
        <label>Berenjena</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brocoli__c</fullName>
        <label>Brocoli</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calabacin__c</fullName>
        <label>Calabacin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cebola_De_Huevo__c</fullName>
        <label>Cebola De Huevo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cebola_De_Rama__c</fullName>
        <label>Cebola De Rama</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cilantro__c</fullName>
        <label>Cilantro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Climate__c</fullName>
        <formula>IF(CONTAINS(&apos;CACERES,CAUCASIA,EL BAGRE,NECHI,TARAZA,ZARAGOZA,LA PINTADA,PUERTO BERRIO,PUERTO NARE,PUERTO TRIUNFO,YONDO,VIGIA DEL FUERTE,MURINDO,APARTADÓ,CHIGORODÓ,CAREPA,TURBO,MUTATÁ,ARBOLETES,NECOCLI,SAN JUAN DE URABA,SAN PEDRO DE URABA&apos;, Municipio__c),&apos;Cálido&apos;,(IF(CONTAINS(&apos;AMAGA,AMALFI,ANDES,ANGELOPOLIS,ANGOSTURA,ANORI,ANZA,ARGELIA,ARMENIA,BARBOSA,BETANIA,BETULIA,BELLO,BRICEÑO,BURITICA,CAICEDO,CALDAS,CAÑAS GORDAS,CAMPAMENTO,CARACOLI,CAROLINA DEL PRINCIPE,CIUDAD BOLIVAR,CISNEROS,COCORNA,CONCORDIA,COPACABANA,DABEIBA,DON MATIAS,EBEJICO,ENVIGADO,FREDONIA,FRONTINO,GIRARDOTA,GIRALDO,GOMEZ PLATA,GUADALUPE,HELICONIA,HISPANIA,ITUAGÜI,ITUANGO,JARDIN,JERICO,LIBORINA,LA ESTRELLA,MACEO,MEDELLIN,MONTEBELLO,NARIÑO,OLAYA,PEQUE,PUEBLORRICO,REMEDIOS,SABANALARGA,SABANETA,SALGAR,SAN ANDRES DE CUERQUIA,SAN CARLOS,SANTA FE DE ANTIOQUIA,SAN FRANCISCO,SAN JERONIMO,SAN LUIS,SAN RAFAEL,SAN ROQUE,SANTA BARBARA,SANTA ROSA DE OSOS,SANTO DOMINGO,SEGOVIA,SOPETRAN,TAMESIS,TARSO,TITIRIBI,TOLEDO,URAMITA,VALDIVIA,VALPARAISO,VEGACHI,VENECIA,YALI,YOLOMBO&apos;, Municipio__c),&apos;Medio&apos;,(IF(CONTAINS(&apos;ABEJORRAL,ABRIAQUI,ALEJANDRIA,BELMIRA,CARAMANTA,CARMEN DE VIBORAL,CONCEPCION,EL PEÑOL,EL RETIRO,ENTRERRIOS,GRANADA,GUARNE,GUATAPE,LA CEJA,LA UNION,MARINILLA,RIONEGRO,SANTUARIO,SAN JOSE DE LA MONTAÑA,SAN PEDRO DE LOS M.,SAN VICENTE,SONSON,URRAO,YARUMAL&apos;, Municipio__c),&apos;Frío&apos;,&apos;Vacio&apos;)))))</formula>
        <label>Climate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Col__c</fullName>
        <label>Col</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coliflor__c</fullName>
        <label>Coliflor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corregimiento__c</fullName>
        <label>Corregimiento</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curuba__c</fullName>
        <label>Curuba</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS_1__c</fullName>
        <label>DS_1</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_2__c</fullName>
        <label>DS_2</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DS_3__c</fullName>
        <label>DS_3</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>De_Sostenibilidad_Score__c</fullName>
        <formula>IF(TEXT(DS_1__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(DS_2__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(DS_3__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(DS_4__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(DS_5__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(DS_6__c)==&apos;Sí&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sostenibilidad Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Donacion_Destination_Amount__c</fullName>
        <label>Donacion Destination Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Espinaca__c</fullName>
        <label>Espinaca</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Visits__c</fullName>
        <label>Family Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Food_Category_Vegetables__c</fullName>
        <formula>Aji__c +Arveja__c +Berenjena__c +Brocoli__c +Calabacin__c  +Cebola_De_Rama__c +Cebola_De_Huevo__c+Cilantro__c  +Col__c+ Coliflor__c + Espinaca__c  + Habichuela__c + Lechuga__c + Pepino__c + Pimenton__c + Rabano__c + Remolacha__c + Repollo__c + Tomate_Alino__c + Zanahoria__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food Category: Vegetables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Food_Category_fruits__c</fullName>
        <formula>Banano__c + Curuba__c + Granadilla__c +  Lulo__c + Maracuya__c + Melon__c + Papaya__c + Pina__c + Sandia__c + Tomate_De_Arbol__c + Uchuva__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food Category: fruits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frijol__c</fullName>
        <label>Frijol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Granadilla__c</fullName>
        <label>Granadilla</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Habichuela__c</fullName>
        <label>Habichuela</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Harvest_stage_date__c</fullName>
        <formula>IF ( TEXT(Backyard_Garden_Stage__c) = &quot;Cosecha&quot;, CreatedDate, Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Harvest stage date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Mana_Household__c</referenceTo>
        <relationshipLabel>Production Records</relationshipLabel>
        <relationshipName>Mana_Household_Production_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Household_save_per_year_cold_climate__c</fullName>
        <formula>CASE(Household__r.Year_by_cycle__c,&apos;2013&apos;, Last_Harvest__c*60650, &apos;2014&apos;,Last_Harvest__c*69755,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household save per year (cold climate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Household_save_per_year_medium_climate__c</fullName>
        <formula>CASE(Household__r.Year_by_cycle__c,&apos;2013&apos;, Last_Harvest__c*61338, &apos;2014&apos;,Last_Harvest__c*81017,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household save per year (medium climate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Household_save_per_year_warm_climate__c</fullName>
        <formula>CASE(Household__r.Year_by_cycle__c,&apos;2013&apos;, Last_Harvest__c*63638, &apos;2014&apos;,Last_Harvest__c*77361,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household save per year (warm climate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Huerta_activa__c</fullName>
        <description>1 = Huerta activa = Cosecha, preparación ó desarrollo
0 = No está activa = Ninguna</description>
        <formula>if(text(Backyard_Garden_Stage__c)=&quot;Ninguna&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Huerta activa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Knows_how_to_si__c</fullName>
        <label>Knows how to sign</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knows_site__c</fullName>
        <label>Knows site</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Harvest__c</fullName>
        <formula>IF(  Household__r.Last_Harvest__c  = CreatedDate ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Harvest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_visit_active_BG__c</fullName>
        <formula>Active_BG__c  *  last_visit__c</formula>
        <label>Last visit active BG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lechuga__c</fullName>
        <label>Lechuga</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lulo__c</fullName>
        <label>Lulo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maiz__c</fullName>
        <label>Maiz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maracuya__c</fullName>
        <label>Maracuya</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Melon__c</fullName>
        <label>Melon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Municipio__c</fullName>
        <label>Municipio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_native_species__c</fullName>
        <label>Number of native species</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_species__c</fullName>
        <label>Number of species</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_topics_TA__c</fullName>
        <label>Other topics TA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_10__c</fullName>
        <label>PC_10</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_11__c</fullName>
        <label>PC_11</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_12__c</fullName>
        <label>PC_12</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Papaya__c</fullName>
        <label>Papaya</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pepino__c</fullName>
        <label>Pepino</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pimenton__c</fullName>
        <label>Pimenton</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pina__c</fullName>
        <label>Pina</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planning_Carried_Out_Score__c</fullName>
        <formula>IF(TEXT(PC_1__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(PC_2__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(PC_3__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(PC_4__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(PC_5__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(PC_6__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(PC_7__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(PC_8__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(PC_9__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(PC_10__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(PC_11__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(PC_12__c)==&apos;Sí&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning Carried Out Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planning_carried_out_category__c</fullName>
        <formula>IF(Planning_Carried_Out_Score__c&lt;4,&apos;Insuficiente&apos;, IF(Planning_Carried_Out_Score__c&gt;3 &amp;&amp; Planning_Carried_Out_Score__c&lt;7, &apos;Aceptable&apos;, &apos;Suficiente&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning carried out category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_type_produced__c</fullName>
        <label>Product type produced</label>
        <picklist>
            <picklistValues>
                <fullName>Acelga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ají</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arveja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arroz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berenjena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brócoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calabacín</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cebolla de rama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cebolla de huevo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cilantro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Col</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coliflor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Espinaca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fríjol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granadilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Habichuela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lechuga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lulo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maíz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maracuyá</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melón</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Papaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pepino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pimentón</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piña</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rábano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remolacha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repollo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Production_target__c</fullName>
        <label>Production target</label>
        <picklist>
            <picklistValues>
                <fullName>Autoconsumo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trueque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venta de excedentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donación</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rabano__c</fullName>
        <label>Rabano</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remolacha__c</fullName>
        <label>Remolacha</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repollo__c</fullName>
        <label>Repollo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Respondent_Id__c</fullName>
        <label>Respondent Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respondent_name__c</fullName>
        <label>Respondent name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandia__c</fullName>
        <label>Sandia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>Mana Household Production Records</relationshipLabel>
        <relationshipName>Mana_Household_Production_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplies_number__c</fullName>
        <label>Supplies number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tomate_Alino__c</fullName>
        <label>Tomate Alino</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tomate_De_Arbol__c</fullName>
        <label>Tomate De Arbol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topics_of_tech_assistance__c</fullName>
        <label>Topics of tech assistance</label>
        <picklist>
            <picklistValues>
                <fullName>Biopreparados y MIPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biocompostaje</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo del cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planeación de la huerta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semilleros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producción de semillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_production_Kg__c</fullName>
        <formula>Autoconsumo_Destination_Amount__c + Donacion_Destination_Amount__c + Trueque_Destination_Amount__c + Venta_Destination_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total production (Kg)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trueque_Destination_Amount__c</fullName>
        <label>Trueque Destination Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uchuva__c</fullName>
        <label>Uchuva</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venta_Destination_Amount__c</fullName>
        <label>Venta Destination Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_by_cycle_n__c</fullName>
        <formula>CASE(Household__r.Year_by_cycle__c,&apos;2013&apos;,2013,&apos;2014&apos;,2014,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year (by cycle) #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zanahoria__c</fullName>
        <label>Zanahoria</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>categoria_sostenibilidad__c</fullName>
        <formula>IF(De_Sostenibilidad_Score__c&lt;3,&apos;Insuficiente&apos;, IF(De_Sostenibilidad_Score__c&gt;2 &amp;&amp; De_Sostenibilidad_Score__c&lt;5, &apos;Aceptable&apos;, &apos;Suficiente&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Categoria sostenibilidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>different_supplies_Mana__c</fullName>
        <label>different supplies Mana</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>garden_duration__c</fullName>
        <label>garden duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>garden_year__c</fullName>
        <label>garden year</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>head_household__c</fullName>
        <label>head household</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>household_member__c</fullName>
        <label>household member</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>id_type__c</fullName>
        <label>id type</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>inactive_explain__c</fullName>
        <label>inactive explain</label>
        <picklist>
            <picklistValues>
                <fullName>No dispone de terreno para la huerta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condiciones climáticas adversas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se desplazó y retornó</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cuenta con el tiempo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No tienen conocimientos técnico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No tiene recursos económicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>last_production_record__c</fullName>
        <formula>if( Household__r.Last_production_date__c = CreatedDate, &quot;Y&quot;, &quot;N&quot;)</formula>
        <label>last production record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_visit__c</fullName>
        <formula>IF(  Household__r.Last_visit__c   = CreatedDate ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>last visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lives_in_site__c</fullName>
        <label>lives in site</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>notes_for_inactivity__c</fullName>
        <label>notes for inactivity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>other_reason_for_inactive_garden__c</fullName>
        <label>other reason for inactive garden</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>respondent_phone__c</fullName>
        <label>respondent phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>supplies_Mana__c</fullName>
        <label>supplies Mana</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ultima_visita__c</fullName>
        <formula>IF(    Household__r.ultima_toma_de_producci_n__c    = CreatedDate ,&quot;Sí&quot;,&quot;No&quot;)</formula>
        <label>Última visita</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>visit_municipality__c</fullName>
        <label>visit municipality</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>where_live_now__c</fullName>
        <label>where live now</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>